--- a/stylesrc/theme-core/cart.less
+++ b/stylesrc/theme-core/cart.less
@@ -167,6 +167,10 @@
     text-align: center;
 }
 
+.cart-lineitem-quantity-select {
+  min-width: 70px;
+}
+
 .btn-cmd-checkout{
     .btn;
     // .btn-lg;
